# payroll-py

./: README.md  compose.yaml  main.py  pyproject.toml
app/: main.py  schema.py
