[project]
name = "payroll-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.5",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "ty>=0.0.1a8",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "I",   # isort
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "T20", # flake8-print
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]
